# PredictFutureSales

./: .gitignore  LICENSE  cutter.py  generator.py  generator_window.py  main.py  makesample.py  process_csv.py  pyproject.toml  save_load_model.py
Data/: sales_train_processed
